# pdfrag

./: .gitignore  README.md  docker-compose.yml  package-lock.json  개발계획서.md  마크다운_RAG_개발계획서.md  챗_UI_프론트엔드_개발계획서.md  통합_GraphRAG_지식관리시스템_개발계획서_축소판.md  통합_하이브리드_RAG_지식관리시스템_개발계획서.md  프로그램_설명서.md  하이브리드_RAG_설비매뉴얼_지식관리시스템_개발계획서.md
.claude/agents/moai/: manager-git.md
.claude/skills/moai-workflow-templates/references/: examples.md
.moai/config/sections/: project.yaml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/chunking/: __init__.py  chunker.py
backend/app/core/: config.py
backend/app/graph/: __init__.py  extractor.py  store.py
backend/app/loaders/: base.py  pdf_loader.py  router.py  text_loader.py  unstructured_loader.py
backend/tests/: test_chunker.py  test_config.py  test_extractor.py  test_pdf_loader.py  test_router.py
docs/: 프로젝트_쉽게_이해하기.md
docs/다음작업/: 2026-06-24_PoC3_그래프_평가셋_Gate1.md  2026-06-25_코드리뷰_수정작업.md  2026-06-27_보완할점_검토결과.md
docs/작업로그/: 2026-06-23_환경구축_PoC1_PoC2.md  2026-06-24_PoC3_그래프_평가셋.md  2026-06-25_PoC3_런타임실행_Gate1완료.md
eval/: dataset.jsonl
samples/: pump_manual.md  pump_report.docx
scripts/: make_samples.py  poc1_loaders.py  poc2_chunking.py  poc3_graph.py
